Rename Secret to VaultSecret (#41)
